# slint-init

./: Cargo.toml  LICENSE  README.md
src/: main.rs
