[package]
name = "slint-init"
version = "0.1.1"
edition = "2024"
authors = ["paper tiger <ljxh2024@qq.com>"]
description = "slint-init is a command-line tool for quickly initializing Slint projects."
homepage = "https://github.com/ljxh2024/slint_init"
documentation = "https://github.com/ljxh2024/slint_init"
repository = "https://github.com/ljxh2024/slint_init"
keywords = ["slint"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]

[profile.release]
debug = false
opt-level = 3
strip = "symbols"
lto = "fat"
panic = "abort"
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1